<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:textColor="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="206dp"
        android:layout_height="181dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#7EFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#7EFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/cuenta"
        android:inputType="number"
        android:maxLength="9"
        android:textColor="#FFFFFF"
        android:textColorHint="#7EFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellidos" />

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sexo"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCuenta"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSexo">

        <RadioButton
            android:id="@+id/masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/masculino"
            android:textColor="#FFFFFF"
            android:checked="true"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/femenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/femenino"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </RadioGroup>

    <ImageView
        android:id="@+id/btnVer"
        android:layout_width="132dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@drawable/boton" />

    <ImageView
        android:id="@+id/btnRegistrar"
        android:layout_width="132dp"
        android:layout_height="63dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@drawable/boton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistrar"
        app:layout_constraintStart_toStartOf="@+id/btnRegistrar"
        app:layout_constraintTop_toTopOf="@+id/btnRegistrar"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnVer"
        app:layout_constraintEnd_toEndOf="@+id/btnVer"
        app:layout_constraintStart_toStartOf="@+id/btnVer"
        app:layout_constraintTop_toTopOf="@+id/btnVer" />

</androidx.constraintlayout.widget.ConstraintLayout>